--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Bicep Individualizado em France Central
+name: Deploy Bicep Individualizado
 
 on:
   push:
@@ -17,7 +17,6 @@ jobs:
     env:
       COSMOS_ACCOUNT_NAME: 'cosmosdbminiprojeto'
       COSMOS_THROUGHPUT: '400'
-      # Se quiseres fallback de regiões para Cosmos, atualiza no passo respectivo
 
     steps:
       - name: Checkout do repositório
@@ -33,167 +32,185 @@ jobs:
       - name: Mostrar contexto Azure
         run: az account show
 
-      # 1. Deploy Resource Group em France Central (subscription scope)
-      - name: Deploy Resource Group em France Central
+      # 1. Validar resource-group.bicep usando CLI local
+      - name: Validar resource-group.bicep
         run: |
           az bicep install || true
           az bicep build --file templates/resource-group.bicep
-          az deployment sub create \
-            --location francecentral \
-            --template-file templates/resource-group.bicep \
-            --parameters rgName='MiniProjetoCloud2.0' location='francecentral'
 
-      # 2. Storage Account + Container (vai herdar location=resourceGroup().location = francecentral)
+      # 2. Deploy Resource Group (subscription scope) usando azure/cli@v1
+      - name: Deploy Resource Group
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az bicep install || true
+            az bicep build --file templates/resource-group.bicep
+            az deployment sub create \
+              --location francecentral \
+              --template-file templates/resource-group.bicep \
+              --parameters rgName='MiniProjetoCloud2.0' location='francecentral'
+
+      # 3. Validar storage-account.bicep e deploy
       - name: Deploy Storage Account + Container
-        run: |
-          az bicep build --file templates/storage-account.bicep
-          az deployment group create \
-            --resource-group MiniProjetoCloud2.0 \
-            --template-file templates/storage-account.bicep \
-            --parameters \
-              storageAccountName='miniprojetostorage20' \
-              containerName='reddit-posts' \
-              enableBlobVersioning=true \
-              blobSoftDeleteDays=7
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az bicep build --file templates/storage-account.bicep
+            az deployment group create \
+              --resource-group MiniProjetoCloud2.0 \
+              --template-file templates/storage-account.bicep \
+              --parameters \
+                storageAccountName='miniprojetostorage20' \
+                containerName='reddit-posts' \
+                enableBlobVersioning=true \
+                blobSoftDeleteDays=7
 
-      # 3. Cosmos DB NoSQL (SQL API) - Opcional com fallback se desejado
+      # 4. Deploy Cosmos DB com fallback de regiões
       - name: Deploy Cosmos DB NoSQL (SQL API) - Opcional com fallback
-        run: |
-          az bicep build --file templates/cosmosdb.bicep
-          if [ -z "${COSMOS_ACCOUNT_NAME}" ]; then
-            echo "Pular criação do Cosmos DB pois COSMOS_ACCOUNT_NAME está vazio."
-            exit 0
-          fi
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az bicep build --file templates/cosmosdb.bicep
 
-          # Regiões: France Central como primária, depois fallback se necessário
-          COSMOS_PRIMARY_LOCATION='francecentral'
-          COSMOS_FALLBACK_LOCATIONS='northeurope eastus uk southcentralus'
+            if [ -z "${COSMOS_ACCOUNT_NAME}" ]; then
+              echo "Pular criação do Cosmos DB pois COSMOS_ACCOUNT_NAME está vazio."
+              exit 0
+            fi
 
-          LOCATIONS_TO_TRY=("$COSMOS_PRIMARY_LOCATION")
-          for loc in $COSMOS_FALLBACK_LOCATIONS; do
-            LOCATIONS_TO_TRY+=("$loc")
-          done
+            # Regiões: France Central + fallback
+            COSMOS_PRIMARY_LOCATION='francecentral'
+            COSMOS_FALLBACK_LOCATIONS='westeurope northeurope eastus uk southcentralus'
 
-          RG="MiniProjetoCloud2.0"
-          ACCOUNT_NAME="${COSMOS_ACCOUNT_NAME}"
-          SUCCESS=false
+            LOCATIONS_TO_TRY=("$COSMOS_PRIMARY_LOCATION")
+            for loc in $COSMOS_FALLBACK_LOCATIONS; do
+              LOCATIONS_TO_TRY+=("$loc")
+            done
 
-          # Garante jq
-          if ! command -v jq &>/dev/null; then
-            sudo apt-get update
-            sudo apt-get install -y jq
-          fi
+            RG="MiniProjetoCloud2.0"
+            ACCOUNT_NAME="${COSMOS_ACCOUNT_NAME}"
+            SUCCESS=false
 
-          for region in "${LOCATIONS_TO_TRY[@]}"; do
-            echo "=== Tentando criar/atualizar Cosmos DB '${ACCOUNT_NAME}' em região: $region ==="
-            # Verificar se existe e estado
-            EXISTE_JSON=$(az cosmosdb show --name "$ACCOUNT_NAME" --resource-group "$RG" -o json 2>/dev/null || echo "")
-            if [ -n "$EXISTE_JSON" ]; then
-              PROV_STATE=$(echo "$EXISTE_JSON" | jq -r '.properties.provisioningState // empty')
-              echo "Conta Cosmos existente detectada com provisioningState: $PROV_STATE"
-              if [ "$PROV_STATE" != "Succeeded" ]; then
-                echo "A conta está em estado '$PROV_STATE'. A eliminar antes de recriar..."
-                az cosmosdb delete --name "$ACCOUNT_NAME" --resource-group "$RG" --yes
-                for i in {1..30}; do
-                  sleep 5
-                  if ! az cosmosdb show --name "$ACCOUNT_NAME" --resource-group "$RG" &>/dev/null; then
-                    echo "Conta Cosmos removida."
-                    break
-                  fi
-                  echo "Aguardando remoção... ($i)"
-                done
-              else
-                echo "Conta existente em estado Succeeded. Vamos atualizar nessa região: $region"
-                # prosseguir para deployment abaixo
+            # Instalar jq se necessário
+            if ! command -v jq &>/dev/null; then
+              sudo apt-get update
+              sudo apt-get install -y jq
+            fi
+
+            for region in "${LOCATIONS_TO_TRY[@]}"; do
+              echo "=== Tentando Cosmos DB '${ACCOUNT_NAME}' em região: $region ==="
+              EXISTE_JSON=$(az cosmosdb show --name "$ACCOUNT_NAME" --resource-group "$RG" -o json 2>/dev/null || echo "")
+              if [ -n "$EXISTE_JSON" ]; then
+                PROV_STATE=$(echo "$EXISTE_JSON" | jq -r '.properties.provisioningState // empty')
+                echo "Estado existente: $PROV_STATE"
+                if [ "$PROV_STATE" != "Succeeded" ]; then
+                  echo "Eliminando instância com estado $PROV_STATE antes de recriar..."
+                  az cosmosdb delete --name "$ACCOUNT_NAME" --resource-group "$RG" --yes
+                  for i in {1..30}; do
+                    sleep 5
+                    if ! az cosmosdb show --name "$ACCOUNT_NAME" --resource-group "$RG" &>/dev/null; then
+                      echo "Removido."
+                      break
+                    fi
+                    echo "Aguardando remoção... ($i)"
+                  done
+                else
+                  echo "Instância já existe e está Succeeded; vamos atualizar nesta região."
+                fi
               fi
+
+              if az deployment group create \
+                  --resource-group "$RG" \
+                  --template-file templates/cosmosdb.bicep \
+                  --parameters \
+                    cosmosAccountName="${ACCOUNT_NAME}" \
+                    cosmosLocation="$region" \
+                    cosmosDatabaseName='RedditApp' \
+                    cosmosContainerName='posts' \
+                    cosmosPartitionKeyPath='/id' \
+                    cosmosThroughput=${COSMOS_THROUGHPUT} \
+                  --only-show-errors; then
+                echo "Cosmos DB OK em $region"
+                SUCCESS=true
+                break
+              else
+                echo "Falha em $region. A tentar próxima..."
+              fi
+            done
+
+            if [ "$SUCCESS" != "true" ]; then
+              echo "Falha em criar Cosmos DB em todas as regiões: ${LOCATIONS_TO_TRY[*]}"
+              exit 1
             fi
 
-            if az deployment group create \
-                --resource-group "$RG" \
-                --template-file templates/cosmosdb.bicep \
-                --parameters \
-                  cosmosAccountName="${ACCOUNT_NAME}" \
-                  cosmosLocation="$region" \
-                  cosmosDatabaseName='RedditApp' \
-                  cosmosContainerName='posts' \
-                  cosmosPartitionKeyPath='/id' \
-                  cosmosThroughput=${COSMOS_THROUGHPUT} \
-                --only-show-errors; then
-              echo "Cosmos DB criado/atualizado com sucesso em $region"
-              SUCCESS=true
-              break
-            else
-              echo "Falha na região $region. A tentar próxima..."
-            fi
-          done
-
-          if [ "$SUCCESS" != "true" ]; then
-            echo "❌ Falha em criar Cosmos DB em todas as regiões tentadas: ${LOCATIONS_TO_TRY[*]}"
-            exit 1
-          fi
-
-      # 4. App Service Plan (herda location RG = francecentral)
+      # 5. App Service Plan
       - name: Deploy App Service Plan
-        run: |
-          az bicep build --file templates/app-service-plan.bicep
-          az deployment group create \
-            --resource-group MiniProjetoCloud2.0 \
-            --template-file templates/app-service-plan.bicep \
-            --parameters \
-              planName='ASP-MiniProjetoCloud2.0' \
-              skuTier='Basic' \
-              skuName='B2' \
-              capacity=1 \
-              isLinux=true
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az bicep build --file templates/app-service-plan.bicep
+            az deployment group create \
+              --resource-group MiniProjetoCloud2.0 \
+              --template-file templates/app-service-plan.bicep \
+              --parameters \
+                planName='ASP-MiniProjetoCloud2.0' \
+                skuTier='Basic' \
+                skuName='B2' \
+                capacity=1 \
+                isLinux=true
 
-      # 5. Gerar SAS token (opcional)
+      # 6. Gerar SAS token opcional
       - name: Gerar SAS token para Storage (opcional)
+        uses: azure/cli@v1
         id: gen_sas
-        run: |
-          ACCOUNT_NAME="miniprojetostorage20"
-          CONTAINER_NAME="reddit-posts"
-          EXPIRY=$(date -u -d "1 day" '+%Y-%m-%dT%H:%MZ')
-          sasToken=$(az storage container generate-sas \
-            --account-name $ACCOUNT_NAME \
-            --name $CONTAINER_NAME \
-            --permissions racld \
-            --expiry $EXPIRY \
-            --https-only \
-            --auth-mode login \
-            --as-user \
-            -o tsv)
-          echo "SAS token gerado."
-          echo "SAS_TOKEN=$sasToken" >> $GITHUB_OUTPUT
+        with:
+          inlineScript: |
+            ACCOUNT_NAME="miniprojetostorage20"
+            CONTAINER_NAME="reddit-posts"
+            EXPIRY=$(date -u -d "1 day" '+%Y-%m-%dT%H:%MZ')
+            sasToken=$(az storage container generate-sas \
+              --account-name $ACCOUNT_NAME \
+              --name $CONTAINER_NAME \
+              --permissions racld \
+              --expiry $EXPIRY \
+              --https-only \
+              --auth-mode login \
+              --as-user \
+              -o tsv)
+            echo "SAS_TOKEN=$sasToken" >> $GITHUB_OUTPUT
 
-      # 6. Web App (herda RG=francecentral)
+      # 7. Web App
       - name: Deploy Web App
-        run: |
-          az bicep build --file templates/web-app.bicep
-          TOKEN="${{ steps.gen_sas.outputs.SAS_TOKEN }}"
-          if [ -z "$TOKEN" ]; then
-            TOKEN=""
-          fi
-          az deployment group create \
-            --resource-group MiniProjetoCloud2.0 \
-            --template-file templates/web-app.bicep \
-            --parameters \
-              webAppName='minhaapp-rodrig0salv' \
-              planName='ASP-MiniProjetoCloud2.0' \
-              imageName='rodrig0salv/minha-app:latest' \
-              containerSasToken="$TOKEN" \
-              storageAccountName='miniprojetostorage20' \
-              containerName='reddit-posts' \
-              containerRegistryUrl='' \
-              containerRegistryUsername='' \
-              containerRegistryPassword='' \
-              createRoleAssignment=false
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            az bicep build --file templates/web-app.bicep
+            TOKEN="${{ steps.gen_sas.outputs.SAS_TOKEN }}"
+            if [ -z "$TOKEN" ]; then
+              TOKEN=""
+            fi
+            az deployment group create \
+              --resource-group MiniProjetoCloud2.0 \
+              --template-file templates/web-app.bicep \
+              --parameters \
+                webAppName='minhaapp-rodrig0salv' \
+                planName='ASP-MiniProjetoCloud2.0' \
+                imageName='rodrig0salv/minha-app:latest' \
+                containerSasToken="$TOKEN" \
+                storageAccountName='miniprojetostorage20' \
+                containerName='reddit-posts' \
+                containerRegistryUrl='' \
+                containerRegistryUsername='' \
+                containerRegistryPassword='' \
+                createRoleAssignment=false
 
-      # 7. Mostrar outputs
+      # 8. Mostrar outputs
       - name: Mostrar outputs do deploy
-        run: |
-          DEPLOY_NAME=$(az deployment group list --resource-group MiniProjetoCloud2.0 --query '[0].name' -o tsv)
-          echo "Deployment name: $DEPLOY_NAME"
-          az deployment group show \
-            --resource-group MiniProjetoCloud2.0 \
-            --name "$DEPLOY_NAME" \
-            --query properties.outputs
+        uses: azure/cli@v1
+        with:
+          inlineScript: |
+            DEPLOY_NAME=$(az deployment group list --resource-group MiniProjetoCloud2.0 --query '[0].name' -o tsv)
+            echo "Deployment name: $DEPLOY_NAME"
+            az deployment group show \
+              --resource-group MiniProjetoCloud2.0 \
+              --name "$DEPLOY_NAME" \
+              --query properties.outputs
