--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Bicep Individualizado
+name: Deploy Bicep Individualizado em France Central
 
 on:
   push:
@@ -19,9 +19,11 @@ jobs:
       COSMOS_THROUGHPUT: '400'
 
     steps:
+      # 1. Checkout
       - name: Checkout do repositório
         uses: actions/checkout@v4
 
+      # 2. Login no Azure
       - name: Login no Azure com Login v2 (OIDC)
         uses: azure/login@v2
         with:
@@ -29,28 +31,34 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      # 3. Mostrar contexto
       - name: Mostrar contexto Azure
         run: az account show
 
-      # 1. Validar resource-group.bicep usando CLI local
-      - name: Validar resource-group.bicep
+      # 4. Validar templates Bicep localmente (runner Ubuntu)
+      - name: Validar todos os templates Bicep
         run: |
+          # Instala Bicep CLI localmente se quiseres (normalmente já instalado)
           az bicep install || true
           az bicep build --file templates/resource-group.bicep
+          az bicep build --file templates/storage-account.bicep
+          az bicep build --file templates/cosmosdb.bicep
+          az bicep build --file templates/app-service-plan.bicep
+          az bicep build --file templates/web-app.bicep
 
-      # 2. Deploy Resource Group (subscription scope) usando azure/cli@v1
-      - name: Deploy Resource Group
+      # 5. Criar Resource Group em France Central (subscription scope)
+      - name: Deploy Resource Group em France Central
         uses: azure/cli@v1
         with:
           inlineScript: |
-            az bicep install || true
+            # Não fazemos az bicep install aqui para evitar conflito
             az bicep build --file templates/resource-group.bicep
             az deployment sub create \
               --location francecentral \
               --template-file templates/resource-group.bicep \
               --parameters rgName='MiniProjetoCloud2.0' location='francecentral'
 
-      # 3. Validar storage-account.bicep e deploy
+      # 6. Deploy Storage Account + Container
       - name: Deploy Storage Account + Container
         uses: azure/cli@v1
         with:
@@ -65,8 +73,16 @@ jobs:
                 enableBlobVersioning=true \
                 blobSoftDeleteDays=7
 
-      # 4. Deploy Cosmos DB com fallback de regiões
-      - name: Deploy Cosmos DB NoSQL (SQL API) - Opcional com fallback
+      # 7. Instalar jq se for preciso para Cosmos
+      - name: Instalar jq (para parsing JSON)
+        run: |
+          if ! command -v jq &>/dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y jq
+          fi
+
+      # 8. Deploy Cosmos DB com fallback e remoção de instância falhada
+      - name: Deploy Cosmos DB NoSQL (SQL API) - Fallback
         uses: azure/cli@v1
         with:
           inlineScript: |
@@ -77,7 +93,6 @@ jobs:
               exit 0
             fi
 
-            # Regiões: France Central + fallback
             COSMOS_PRIMARY_LOCATION='francecentral'
             COSMOS_FALLBACK_LOCATIONS='westeurope northeurope eastus uk southcentralus'
 
@@ -90,14 +105,9 @@ jobs:
             ACCOUNT_NAME="${COSMOS_ACCOUNT_NAME}"
             SUCCESS=false
 
-            # Instalar jq se necessário
-            if ! command -v jq &>/dev/null; then
-              sudo apt-get update
-              sudo apt-get install -y jq
-            fi
-
             for region in "${LOCATIONS_TO_TRY[@]}"; do
               echo "=== Tentando Cosmos DB '${ACCOUNT_NAME}' em região: $region ==="
+              # Verificar se existe e estado
               EXISTE_JSON=$(az cosmosdb show --name "$ACCOUNT_NAME" --resource-group "$RG" -o json 2>/dev/null || echo "")
               if [ -n "$EXISTE_JSON" ]; then
                 PROV_STATE=$(echo "$EXISTE_JSON" | jq -r '.properties.provisioningState // empty')
@@ -105,6 +115,7 @@ jobs:
                 if [ "$PROV_STATE" != "Succeeded" ]; then
                   echo "Eliminando instância com estado $PROV_STATE antes de recriar..."
                   az cosmosdb delete --name "$ACCOUNT_NAME" --resource-group "$RG" --yes
+                  # Aguardar remoção
                   for i in {1..30}; do
                     sleep 5
                     if ! az cosmosdb show --name "$ACCOUNT_NAME" --resource-group "$RG" &>/dev/null; then
@@ -114,7 +125,7 @@ jobs:
                     echo "Aguardando remoção... ($i)"
                   done
                 else
-                  echo "Instância já existe e está Succeeded; vamos atualizar nesta região."
+                  echo "Instância já existe e está Succeeded; vamos atualizar nesta mesma região."
                 fi
               fi
 
@@ -138,11 +149,11 @@ jobs:
             done
 
             if [ "$SUCCESS" != "true" ]; then
-              echo "Falha em criar Cosmos DB em todas as regiões: ${LOCATIONS_TO_TRY[*]}"
+              echo "❌ Falha em criar Cosmos DB em todas as regiões: ${LOCATIONS_TO_TRY[*]}"
               exit 1
             fi
 
-      # 5. App Service Plan
+      # 9. Deploy App Service Plan
       - name: Deploy App Service Plan
         uses: azure/cli@v1
         with:
@@ -158,7 +169,7 @@ jobs:
                 capacity=1 \
                 isLinux=true
 
-      # 6. Gerar SAS token opcional
+      # 10. Gerar SAS token para Storage (opcional)
       - name: Gerar SAS token para Storage (opcional)
         uses: azure/cli@v1
         id: gen_sas
@@ -178,7 +189,7 @@ jobs:
               -o tsv)
             echo "SAS_TOKEN=$sasToken" >> $GITHUB_OUTPUT
 
-      # 7. Web App
+      # 11. Deploy Web App
       - name: Deploy Web App
         uses: azure/cli@v1
         with:
@@ -203,7 +214,7 @@ jobs:
                 containerRegistryPassword='' \
                 createRoleAssignment=false
 
-      # 8. Mostrar outputs
+      # 12. Mostrar outputs finais
       - name: Mostrar outputs do deploy
         uses: azure/cli@v1
         with:
